[gd_scene load_steps=6 format=3 uid="uid://bnv4vxcfhw748"]

[ext_resource type="Texture2D" uid="uid://dofwt33d5x5b4" path="res://art/BasicPotSprite.png" id="1_mca33"]
[ext_resource type="Script" path="res://basic_pot.gd" id="2_4o27a"]
[ext_resource type="Texture2D" uid="uid://lfr6kouyp8kq" path="res://art/BasicPotSpriteLight.png" id="2_5h1pg"]
[ext_resource type="AudioStream" uid="uid://bo5xn2jlbffkj" path="res://art/plant_sound.mp3" id="4_ofvtk"]
[ext_resource type="FontFile" uid="uid://vgv1ku8o106o" path="res://art/Harvest Season.otf" id="5_ine0h"]

[node name="BasicPot" type="TextureButton"]
custom_minimum_size = Vector2(83, 80)
offset_right = 83.0
offset_bottom = 80.0
texture_normal = ExtResource("1_mca33")
texture_hover = ExtResource("2_5h1pg")
script = ExtResource("2_4o27a")

[node name="PlantSeedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ofvtk")
volume_db = 12.0

[node name="SeedInventoryTutorial" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.079
anchor_top = 0.856
anchor_right = -0.079
anchor_bottom = 0.856
offset_left = -15.443
offset_top = -171.48
offset_right = 382.557
offset_bottom = 137.52
scale = Vector2(0.3, 0.3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("5_ine0h")
theme_override_font_sizes/font_size = 75
text = "Click on pot
to open seed
inventory"
horizontal_alignment = 1

[node name="PlantSeedTutorial" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.079
anchor_top = 0.856
anchor_right = -0.079
anchor_bottom = 0.856
offset_left = -87.443
offset_top = -272.48
offset_right = 800.557
offset_bottom = 345.52
scale = Vector2(0.3, 0.3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("5_ine0h")
theme_override_font_sizes/font_size = 75
text = "Click on a seed
in the inventory to
plant it in the selected pot. 

Click anywhere outside the
seed inventory to close it."
horizontal_alignment = 1

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
